--- a/.github/workflows/infrastructure-pipeline.yml
+++ b/.github/workflows/infrastructure-pipeline.yml
@@ -73,6 +73,15 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         terraform_version: 1.8.4
+    - name: List directories
+      run: |
+        echo "Current directory:"
+        pwd
+        echo "Contents of current directory:"
+        ls -la
+        echo "Contents of parent directory:"
+        ls -la ..
+        working-directory: eks    
 
   Terraform-Initializing:
     runs-on: ubuntu-latest
