--- a/.github/workflows/infrastructure-pipeline.yml
+++ b/.github/workflows/infrastructure-pipeline.yml
@@ -18,7 +18,7 @@ on:
         default: 'apply'
 
 env:
-      AWS_REGION: us-east-1
+      AWS_REGION: eu-north-1
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
@@ -50,7 +50,7 @@ jobs:
         working-directory: eks
 
     env:
-      AWS_REGION: us-east-1
+      AWS_REGION: eu-north-1
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     
@@ -70,18 +70,9 @@ jobs:
     steps:
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
+      uses: hashicorp/setup-terraform@v3
       with:
-        terraform_version: 1.8.4
-    - name: List directories
-      run: |
-        echo "Current directory:"
-        pwd
-        echo "Contents of current directory:"
-        ls -la
-        echo "Contents of parent directory:"
-        ls -la ..
-        working-directory: eks    
+        terraform_version: 1.8.4   
 
   Terraform-Initializing:
     runs-on: ubuntu-latest
@@ -91,7 +82,7 @@ jobs:
     steps:
 
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
+      uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: 1.8.4
         
@@ -113,9 +104,8 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: 1.8.4
+      uses: hashicorp/setup-terraform@v3
+      
         
     - name: Terraform Init
       working-directory: eks
@@ -140,9 +130,8 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: 1.8.4
+      uses: hashicorp/setup-terraform@v3
+      
 
     - name: Terraform Init
       working-directory: eks
@@ -154,6 +143,13 @@ jobs:
       working-directory: eks
       # Generates an execution plan for Terraform
       run: |
+        echo "Current directory:"
+        pwd
+        echo "Contents of current directory:"
+        ls -la
+        echo "Contents of parent directory:"
+        ls -la ..
+        working-directory: eks
         terraform plan -var-file=${{ github.event.inputs.tfvars_file }} -input=false
 
     
