--- a/.github/workflows/infrastructure-pipeline.yml
+++ b/.github/workflows/infrastructure-pipeline.yml
@@ -6,7 +6,7 @@ on:
       tfvars_file:
         description: 'Path to the .tfvars file'
         required: true
-        default: 'dev.tfvars'
+        default: 'test.tfvars'
       action:
         type: choice
         description: 'Apply or Destroy'
@@ -70,7 +70,9 @@ jobs:
     steps:
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.8.4
         
 
   Terraform-Initializing:
@@ -81,7 +83,9 @@ jobs:
     steps:
 
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.8.4
       
         
     - name: Checkout repository
@@ -102,7 +106,9 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.8.4
       
         
     - name: Terraform Init
@@ -128,7 +134,9 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.8.4
       
 
     - name: Terraform Init
