--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -136,16 +136,16 @@ jobs:
       
       # Generates an execution plan for Terraform
       run: |
-        terraform plan -var-file=${{ github.event.inputs.tfvars_file }} -input=false
+        terraform plan -input=false
 
     
       # Apply the Terraform Configuration according to the parameter
     - name: Terraform Action
       if: ${{ github.event.inputs.action  == 'apply' }}
       
-      run: terraform ${{ github.event.inputs.action }} -auto-approve -var-file=${{ github.event.inputs.tfvars_file }} -input=false
+      run: terraform ${{ github.event.inputs.action }} -auto-approve -input=false
 
     - name: Terraform Destroy
       if: ${{ github.event.inputs.action == 'destroy' }}
       
-      run: terraform ${{ github.event.inputs.action }} -auto-approve -var-file=${{ github.event.inputs.tfvars_file }} -input=false
+      run: terraform ${{ github.event.inputs.action }} -auto-approve -input=false
